# aistarlight

./: .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
backend/: config.py  deps.py  main.py
backend/api/: audit.py  auth.py  bank_recon.py  chat.py  compliance.py  corrections.py  dashboard.py  data.py  forms.py  knowledge.py  memory.py  receipts.py  reconciliation.py  reports.py  router.py  settings.py  withholding.py
backend/core/: database.py  llm.py  security.py
backend/migrations/: alembic.ini  env.py
backend/models/: __init__.py  anomaly.py  audit.py  bank_recon.py  base.py  chat.py  correction.py  form_schema.py  knowledge.py  memory.py  receipt.py  reconciliation.py  report.py  revoked_token.py  supplier.py  tenant.py  transaction.py  user_tenant.py  withholding.py  workflow.py
backend/repositories/: anomaly_repo.py  audit.py  bank_recon_repo.py  base.py  chat.py  correction_repo.py  correction_rule_repo.py  form_schema.py  knowledge.py  memory.py  receipt_repo.py  reconciliation_repo.py  report.py  supplier_repo.py  tenant.py  transaction.py  (+2 more)
deploy/: nginx.conf  setup-server.sh
frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ocr-service/: Dockerfile  main.py  requirements.txt
scripts/: create_chat_table.py  seed_form_schemas.py  seed_knowledge.py
tests/: conftest.py  test_ewt_rates.py  test_filing_calendar.py  test_rbac.py  test_report_editor.py  test_security.py  test_tax_engine.py
(+192 files in other folders)
